# tirrex_demo

./: CMakeLists.txt  package.xml  tirrex_demo.repos  tirrex_demo_public.repos
doc/: installation.md
launch/: core.launch.py  demo.launch.py  record.launch.py  replay.launch.py  robot.launch.py  robot_devices.launch.py  robot_devices_controllers.launch.py  robot_state_publisher.launch.py  simulator.launch.py
launch/algos/edge/: edge_detection_circle.launch.py  edge_detection_cylinder.launch.py  edge_following.launch.py  edge_following_circle.launch.py  edge_following_cylinder.launch.py
launch/robot/: robot.launch.py  robot_devices.launch.py  robot_localisation.launch.py  robot_path_following.launch.py  robot_path_recorder.launch.py  robot_state_publisher.launch.py
python/: tirrex_demo.py
scripts/: robot_description.py
tirrex_core/: config.py  launch.py
