<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tirrex_demo</name>
  <version>0.0.0</version>
  <description>Package containing tools for tirrex demos.</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <depend>romea_common_bringup</depend>
  <depend>romea_mobile_base_bringup</depend>
  <depend>romea_gps_bringup</depend>
  <depend>romea_imu_bringup</depend>
  <depend>romea_lidar_bringup</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>